--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,8 +1,9 @@
-$black: #080809;
-$primary: #caab2a;
-$dark: $black;
+$primary: #CA9F68;
+$secondary: #0A301C;
+$black: #000000;
 
-$background: $black;
+
+$background: $primary;
 $text: #fff;
 $text-strong: #fff;
 
