--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -24,14 +24,15 @@
     padding: 80px 100px 60px;
 
     .category-title {
-      font-size: $size-2;
+      font-size: 65.963px;;
       color: $primary;
       font-weight: bold;
       margin-bottom: 50px;
     }
 
     .column.is-4 .category-title {
-      font-size: 60px;
+      font-size: 69.96px;
+      line-height: 110%;
     }
 
     .menu-no-images {
@@ -46,7 +47,7 @@
 
         .category-title {
           white-space: nowrap;
-          font-size: 60px;
+          font-size: 65.963px;
           margin-bottom: 64px;
         }
 
@@ -79,8 +80,7 @@
     &-info {
       .item-title {
         color: #fff;
-        font-size: 44px;
-        line-height: 54px;
+        font-size: 46.5621px;
         margin-bottom: 24px;
         font-weight: bold;
       }
