--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -17,8 +17,8 @@ $dropdown-menu-min-width: 248px;
 $dropdown-content-padding-bottom: 8px;
 $dropdown-content-padding-top: 8px;
 
-$family-primary: "Libre Caslon Text", serif;
-$family-secondary: "IBM Plex Sans", sans-serif;
+$family-primary: 'Vidaloka', serif;
+$family-secondary: 'Montserrat', sans-serif;
 
 $size-1: 88px;
 $size-2: 48px;
