--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&family=Libre+Caslon+Text:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Vidaloka&display=swap');
 
 @import "./variables.scss";
 
